<resources>
    <string name="app_name">Часы в гараже</string>
    <string name="bluetooth_on_off">Вкл./Выкл. Bluetooth</string>
    <string name="bluetooth_off">Bluetooth выключен</string>
    <string name="start_search">Начать поиск</string>
    <string name="bluetooth_not_supported">Bluetooth не поддерживается</string>
    <string name="stop_search">Остановить поиск</string>
    <string name="disconnect">Отключиться</string>
    <string name="led_red">Красный светодиод</string>
    <string name="led_green">Зелёный светодиод</string>
    <string name="dont_connect">Не могу соединиться</string>
    <string name="Connecting">Соединение...</string>
    <string name="please_wait">Подождите пожалуйста</string>

    <string name="hh">Привет</string>
    <string name="test">test</string>
    <string name="hello">привет</string>
    <string name="no_data">Нет данных</string>
    <string name="frame_crc">Контрольная сумма пакета</string>
    <string name="frame_len">Длина поля данных</string>
    <string name="frame_seq">Счётчик пакетов</string>
    <string name="frame_sysid">ID отправителя</string>
    <string name="frame_msgid">тип сообщения</string>
    <string name="Frame_data">Данные с фрейма</string>
    <string name="Temp_out">Температура на улице</string>
    <string name="Pressure_out">Давление мм рт. ст.</string>
    <string name="Temp_in">Температура в гараже</string>
    <string name="Time">Время</string>
    <string name="Date">Дата</string>
    <string name="sinx_time">Синхронизировать время</string>
    <string name="Send_error">Не получилось отправить данные</string>
    <string name="Synx_clock">Часы Сихронизированы</string>
    <string name="notSynx_clock">Часы не Сихронизированы </string>
    <string name="error_code">Error code </string>
</resources>
